# Endlex

./: .gitignore  CLAUDE.md  README.md  TECH_PLAN.md  pyproject.toml
.github/workflows/: test.yml
deploy/: README.md  endlex.env.example  endlex.service  nginx.conf.snippet
endlex/: __init__.py  checkpoint_sync.py  tracker.py
endlex/server/: app.py  auth.py  storage.py
endlex/server/templates/: _base.html  compare.html  dashboard.html  export.html  run.html
tests/: conftest.py  test_auth.py  test_browser.py  test_checkpoint_sync.py  test_e2e.py  test_endpoints.py  test_smoke.py  test_storage.py  test_tracker.py
