[project]
name = "endlex"
version = "0.1.0"
description = "Self-hosted, single-user replacement for wandb metrics tracking and checkpoint sync"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
endlex-server = "endlex.server.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["endlex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
